--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,16 @@
-<HTML>
+<html>
+<head>
+<style>
+  body {
+    align-items: center;
+    display: flex;
+    font-family:helvetica;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
+</style>
+</head>
+<body>
 Welcome to quirky.place
-<HTML>
+</body></html>
