--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <!doctype html> <!-- quirky.place/public/index.html -->
 <html lang="en">
 <head>
+  <title>quitky.place</title>
+<!--
+             _      _
+  __ _ _   _(_)_ __| | ___   _
+ / _` | | | | | '__| |/ / | | |
+| (_| | |_| | | |  |   <| |_| |
+ \__, |\__,_|_|_|  |_|\_\\__, |
+    |_|                  |___/
+
+     www.quirky.place
+-->
   <meta charset="utf-8"   />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description"                  content="a quirky website for fun"/>
